--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:uno]
-; platform = atmelavr
-; board = uno
-; framework = arduino
-
-[env:nano_every]
-platform = atmelmegaavr
-board = nano_every
+[env:uno]
+platform = atmelavr
+board = uno
 framework = arduino
+
+; [env:nano_every]
+; platform = atmelmegaavr
+; board = nano_every
+; framework = arduino
