change platform to teensy 4

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,12 @@
 ; board = nano_every
 ; framework = arduino
 
-[env:teensylc]
+; [env:teensylc]
+; platform = teensy
+; board = teensylc
+; framework = arduino
+
+[env:teensy40]
 platform = teensy
-board = teensylc
+board = teensy40
 framework = arduino
