change teensy 4.0 to 4.1

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,12 @@
 ; board = teensylc
 ; framework = arduino
 
-[env:teensy40]
+; [env:teensy40]
+; platform = teensy
+; board = teensy40
+; framework = arduino
+
+[env:teensy41]
 platform = teensy
-board = teensy40
+board = teensy41
 framework = arduino
