--- a/platformio.ini
+++ b/platformio.ini
@@ -8,27 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:uno]
-; platform = atmelavr
-; board = uno
-; framework = arduino
-
-; [env:nano_every]
-; platform = atmelmegaavr
-; board = nano_every
-; framework = arduino
-
-; [env:teensylc]
-; platform = teensy
-; board = teensylc
-; framework = arduino
-
 [env:teensy40]
 platform = teensy
 board = teensy40
 framework = arduino
 
-; [env:teensy41]
-; platform = teensy
-; board = teensy41
-; framework = arduino
+lib_deps =
+    Ethernet@2.0.2
+    EthernetBonjour
+    OSCBundle
+    AccelStepper@1.64
+    https://github.com/PaulStoffregen/SPI.git
+    https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
